...
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end">

                                <Button
                                    android:id="@+id/buttonSettings"
                                    style="@style/Widget.Material3.Button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{strings.more_setting}"
                                    android:textSize="11.7sp" />

...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{strings.main_legacy_method_text}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <Button
                            android:id="@+id/buttonTutorial"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{strings.tutorial}"
                            android:textSize="13sp" />

...
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/buttonFloatingButtonSettings"
                                style="@style/Widget.Material3.Button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{strings.floating_button_settings}"
                                android:textSize="13sp" />
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{strings.setting_post_actions_description}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <Button
                            android:id="@+id/buttonPostActions"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{strings.setting_post_actions}"
                            android:textSize="13sp" />

...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{strings.button_history_description}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                        <Button
                            android:id="@+id/buttonHistory"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{strings.button_history}"
                            android:textSize="13sp" />

...
