...
    <string name="app_name_long">&#x200c;Screenshot Tile (NoRoot)</string>
    <string name="tile_label">&#x200c;Screenshot</string>
    <string name="tile_floating">&#x200c;Floating Screenshot Button</string>
    <string name="tile_floating_label">&#x200c;Floating</string>
    <string name="tile_floating_subtitle">&#x200c;Screenshot Button</string>
    <string name="title_delay">&#x200c;Delay</string>
    <string name="more_setting">&#x200c;More Settings</string>
    <string name="open_settings">&#x200c;Open settings</string>
    <string name="floating_button_settings">&#x200c;Floating button settings</string>
    <string name="left_screenshot_right_menu">&#x200c;Left: Screenshot, right: Settings</string>
    <string name="partial_screenshot">&#x200c;Select area</string>
    <string name="options_dialog">&#x200c;Show options</string>
    <string name="file_format">&#x200c;File format</string>
    <string name="setting_delay_entry_default">&#x200c;Instant</string>
    <string name="setting_delay_entry_1s">&#x200c;1s</string>
...
    <string name="setting_prevent_if_locked_summary">&#x200c;No more accidental \"pocket dialing\" screenshots</string>
    <string name="setting_pe_overwrite_file">&#x200c;Overwrite file</string>
    <string name="setting_pe_overwrite_file_summary">&#x200c;The included photo editor tries to overwrite the current image instead of creating a new file</string>
    <string name="notification_settings">&#x200c;Notifications</string>
    <string name="notification_settings_on">&#x200c;Enabled</string>
    <string name="notification_settings_off">&#x200c;Disabled</string>
    <string name="setting_post_actions">&#x200c;Subsequent actions</string>
    <string name="setting_post_actions_description">&#x200c;Choose what happens after the screenshot was taken</string>
    <string name="button_history">&#x200c;Recent screenshots</string>
    <string name="button_history_description">&#x200c;View your recent screenshots including files that were not saved to the gallery</string>
    <string name="history_title">&#x200c;Screenshot history</string>
    <string name="restore_default_values">&#x200c;Restore default values</string>
    <string name="post_action_save_to_storage">&#x200c;Save image to gallery</string>
    <string name="post_action_show_toast">&#x200c;Show a \"Toast\" notification. A small popup that disappears after 2 seconds</string>
    <string name="post_action_show_notification">&#x200c;Show a regular notification. You can change the buttons (Edit,Share,…) below the notification under \"More Settings\"</string>
...
    <string name="screenshot_rename_failed">&#x200c;Could not rename file</string>
    <string name="permission_missing_external_storage">&#x200c;Failed to acquire permission for storage</string>
    <string name="permission_missing_screen_capture">&#x200c;Failed to acquire permission to record screen capture</string>
    <string name="hide_app_from_launcher">&#x200c;Hide app icon from launcher</string>
    <string name="hide_app_unsupported">&#x200c;Not supported on Android 10+</string>
    <string name="toggle_app_icon_failed">&#x200c;Failed to show/hide app icon</string>
    <string name="tutorial">&#x200c;Tutorial</string>
    <string name="tutorial_tap_for_next_step">&#x200c;Tap for next step</string>
    <string name="tutorial_step2">&#x200c;Pull down the notifications area</string>
    <string name="tutorial_step3">&#x200c;Pull down the quick settings</string>
    <string name="tutorial_step4">&#x200c;Tap the edit button</string>
    <string name="tutorial_step5">&#x200c;Find the new screenshot button</string>
    <string name="tutorial_step6">&#x200c;Drag the button into your settings</string>
...
