...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{strings.tutorial_tap_for_next_step}"
                android:textSize="18sp" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
...
